export default {
    title: 'Components/Timeline',
    parameters: {
        description: `The timeline control shows entries (such as objects, events, or posts) in chronological order.

A common use case is to provide information about changes to an object, or events related to an object. These entries can be added manually or generated by the system (for example, value XY changed from A to B). The latest entry is always on top.
        
Another use case is a feed that is driven by user updates and comments. This feed can also be entirely devoid of machine-generated content.

##Usage
**Use timeline if:**

- You want to display read-only content, such as an object history.
- Your customers do not use SAP Jam.
- You expect a long list of posts triggered by the system, the users, or both.
- You want users to be able to create their own posts.
- You want to offer custom actions for individual items.


**Do not use timeline if:**

- You expect only a few entries. In this case, use a simple feed.
- You want to provide a way to upload files. Use the upload collection control instead. You can still use the timeline to show automated updates about the user’s uploads.
- You need SAP Jam integration. In this case, use the group feed component.

##Responsiveness
The timeline control is fully responsive. Both the single-sided and the double-sided layouts have a maximum width. This prevents the control from being excessively stretched.

For size S (smartphone), it's recommended to use the single-sided layout combined with narrow containers, such as the dynamic side panel. Also use the single-sided layout if the column in the flexible layout is too narrow for the double-sided layout. As soon as you have enough screen real estate, switch to the double-sided version to fully utilize the available space.

The single-sided version has a maximum width of 30 rem, while the double-sided layout has 57.5 rem.

##Layout

The timeline control consists of:

- A header (optional, but highly recommended) - describes the content displayed along the timeline axis.
- A chronological axis - the entries are arranged chronologically along the axis. The distance does not correspond to the time between each occurrence. There are two types of axis: 
vertical and horizontal. The timeline can be scrolled along its axis. By default, the latest entries appear on top. Replies are sorted the other way round.
- Posts/entries - can be entered manually or by the system. The entry should include information about who changed what, and when. Posts consist of:
  - Node - default or icon node. You can use icons if all entry types that will appear in the timeline can be represented by an icon. If you cannot find icons for all post types, use nodes instead.
  - Header section - contains an avatar, text(s) and/or link(s), a time stamp, an (expandable) content section and optional action section containing actions that can be performed on an item, such as Edit or Delete

The following optional features can be added:

- Filter
- Group
- Add entries

##Grouping

The timeline allows applications to group posts by certain criteria (for example, by year). Groups can be expanded and collapsed for a better overview.

Grouping is supported by all timeline types and layouts: vertical and horizontal as well as left-, right- and double-sided.

##Layout

There are various layout options. When you choose the layout, consider the type of content and the screen real estate available for displaying the control.

- Vertical - Use the vertical timeline for narrow containers or on smartphones (in portrait mode).
- Horizontal - You can use the horizontal timeline on wide screens, the object page, or even on smartphones in landscape mode. You can display both the vertical and horizontal timelines with or without icons.
<br><br><br>
        `,
        tags: ['f3', 'a11y', 'theme'],
        components: ['timeline', 'icon', 'avatar', 'button', 'link', 'text']
    }
};

export const grouping = () => `<h4>Expanded (Default) Group Header</h4>
<div class="fd-timeline__group-header" tabindex="0">
    <span class="fd-timeline__group-header-icon">
        <i class="sap-icon--navigation-down-arrow"></i>
    </span>
    <span class="fd-timeline__group-header-text">2021</span>
</div>
<br><br>
<h4>Collapsed Group Header</h4>       
<div class="fd-timeline__group-header fd-timeline__group-header--collapsed" tabindex="0">
    <span class="fd-timeline__group-header-icon">
        <i class="sap-icon--navigation-right-arrow"></i>
    </span>
    <span class="fd-timeline__group-header-text">2021</span>
</div>
<br><br>
<h4>Collapsed Horizontal Group Header</h4>       
<div class="fd-timeline__group-header fd-timeline__group-header--collapsed fd-timeline__group-header--horizontal" tabindex="0">
    <span class="fd-timeline__group-header-icon">
        <i class="sap-icon--navigation-right-arrow"></i>
    </span>
    <span class="fd-timeline__group-header-text">2021</span>
</div>
`;

grouping.storyName = 'Grouping Anatomy';
grouping.parameters = {
    docs: {
        storyDescription: ''
    }
};

export const groupingContainer = () => `<h4>Vertical Layout Group Header Container</h4>
<div class="fd-timeline" style="width: 600px;">
    <ul class="fd-timeline__group fd-timeline__group--collapsed" role="tree">
        <li class="fd-timeline__group-header-container" role="treeitem" aria-level="1">
            <div class="fd-timeline__group-header fd-timeline__group-header--collapsed" tabindex="0">
                <span class="fd-timeline__group-header-icon">
                    <i class="sap-icon--navigation-right-arrow"></i>
                </span>
                <span class="fd-timeline__group-header-text">2021</span>
            </div>
            <div class="fd-timeline__group-header-bar"></div>
        </li>
    </ul>
    <ul class="fd-timeline__group fd-timeline__group--collapsed" role="tree">
        <li class="fd-timeline__group-header-container" role="treeitem" aria-level="1">
            <div class="fd-timeline__group-header fd-timeline__group-header--collapsed" tabindex="0">
                <span class="fd-timeline__group-header-icon">
                    <i class="sap-icon--navigation-right-arrow"></i>
                </span>
                <span class="fd-timeline__group-header-text">2021</span>
            </div>
            <div class="fd-timeline__group-header-bar"></div>
        </li>
    </ul>
    <ul class="fd-timeline__group" role="tree">
        <li class="fd-timeline__group-header-container" role="treeitem" aria-level="1">
            <div class="fd-timeline__group-header" tabindex="0">
                <span class="fd-timeline__group-header-icon">
                    <i class="sap-icon--navigation-down-arrow"></i>
                </span>
                <span class="fd-timeline__group-header-text">2021</span>
            </div>
        </li>
    </ul>
</div>

<br><br>
<h4>Horizontal Layout Group Header Container</h4>
<div class="fd-timeline" style="width: 600px;">
    <ul class="fd-timeline__group fd-timeline__group--collapsed" role="tree" style="height: 150px;">
        <li class="fd-timeline__group-header-container fd-timeline__group-header-container--horizontal" role="treeitem" aria-level="1">
            <div class="fd-timeline__group-header fd-timeline__group-header--horizontal fd-timeline__group-header--collapsed" tabindex="0">
                <span class="fd-timeline__group-header-icon">
                    <i class="sap-icon--navigation-right-arrow"></i>
                </span>
                <span class="fd-timeline__group-header-text">2021</span>
            </div>
            <div class="fd-timeline__group-header-bar"></div>
        </li>
    </ul>
</div>
`;

groupingContainer.storyName = 'Group Container';
groupingContainer.parameters = {
    docs: {
        storyDescription: ''
    }
};

export const posts = () => `<div class="fd-timeline" style="width: 500px;">
    <h4>Right Arrow</h4>
    <div>The example post consists of content text only</div><br>
    <div class="fd-timeline__post fd-timeline__post--right">
        <div class="fd-timeline__post-content">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
    </div>
    <br><br>

    <h4>Left Arrow</h4>  
    <div>The example post consists of post header (link title, header text and subheader), content text and actions</div><br>   
    <div class="fd-timeline__post fd-timeline__post--left">
        <div class="fd-timeline__post-header-container">
            <div class="fd-timeline__post-header">
                <a href="#" class="fd-link fd-link--emphasized" tabindex="0">Elena Petrova</a>
                <span class="fd-timeline__post-header-text">added an invoice</span>
                <div class="fd-timeline__post-subheader">02/22/2021 at 5:00 PM</div>
            </div>
        </div>
        <div class="fd-timeline__post-content">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <div class="fd-timeline__post-actions">
            <button class="fd-button fd-button--compact fd-button--transparent">Edit</button>
            <button class="fd-button fd-button--compact fd-button--transparent">Delete</button>
        </div>
    </div>

    <br><br>
    <h4>Top Arrow</h4>  
    <div>The example post consists of post header (avatar, link title, header text and subheader), content text and actions</div><br> 
    <div class="fd-timeline__post fd-timeline__post--top">
        <div class="fd-timeline__post-header-container">
            <span class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail" style="background-image: url('/assets/images/avatars/1.svg')" role="img" aria-label="John Doe"></span>
            <div class="fd-timeline__post-header">
                <a href="#" class="fd-link fd-link--emphasized" tabindex="0">Elena Petrova</a>
                <span class="fd-timeline__post-header-text">added an invoice</span>
                <div class="fd-timeline__post-subheader">02/22/2021 at 5:00 PM</div>
            </div>
        </div>
        <div class="fd-timeline__post-content">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <div class="fd-timeline__post-actions">
            <button class="fd-button fd-button--compact fd-button--transparent">Open in App</button>
        </div>
    </div>

    <br><br>
    <h4>Bottom Arrow</h4>
    <div>The example post consists of post header (avatar, normal title and header text), content text usisng Text component with "MORE"/"LESS" links and actions</div><br>
    <div class="fd-timeline__post fd-timeline__post--bottom">
        <div class="fd-timeline__post-header-container">
            <span class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail" style="background-image: url('/assets/images/avatars/1.svg')" role="img" aria-label="John Doe"></span>
            <div class="fd-timeline__post-header">
                <span class="fd-timeline__post-header-title">Elena Petrova</span>
                <span class="fd-timeline__post-header-text">added an invoice</span>
            </div>
        </div>
        <div class="fd-timeline__post-content">
            <p class="fd-text">
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                magna aliqua. Malesuada bibendum arcu vitae elementum. Ut etiam sit amet nisl. Laoreet suspendisse interdum
                consectetur libero id faucibus nisl. Tellus in metus vulputate eu scelerisque felis imperdiet proin fermentum.
                Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan. Mauris vitae ultricies...
            </p>
            <a class="fd-link fd-text__link--more" tabindex="0">More</a>
        </div>
        <div class="fd-timeline__post-actions">
            <button class="fd-button fd-button--compact fd-button--transparent">Open in App</button>
        </div>
    </div>
</div>
`;

posts.storyName = 'Posts Anatomy';
posts.parameters = {
    docs: {
        storyDescription: ''
    }
};

export const nodes = () => `<div class="fd-timeline" style="width: 300px;">
    <h4>Default Node (without icon)</h4>
    <div class="fd-timeline__node-container" style="height:100px;">
        <div class="fd-timeline__connecting-line"></div>
        <div class="fd-timeline__node"></div>
        <div class="fd-timeline__connecting-line"></div>
    </div>
   
    <br><br>
    <h4>Node with icon</h4>
    <div class="fd-timeline__node-container" style="height:100px;">
        <div class="fd-timeline__connecting-line"></div>
        <div class="fd-timeline__node fd-timeline__node--icon">
            <span class="sap-icon sap-icon--post"></span>
        </div>
        <div class="fd-timeline__connecting-line"></div>
    </div>

    <br><br>
    <h4>Node for grouping</h4>
    <div class="fd-timeline__node-container" style="height:100px;">
        <div class="fd-timeline__connecting-line"></div>
        <div class="fd-timeline__node fd-timeline__node--grouping"></div>
        <div class="fd-timeline__connecting-line"></div>
    </div>
    
    <h4>Horizontal default node (without icon)</h4>
    <div class="fd-timeline__node-container fd-timeline__node-container--horizontal" style="width:150px;">
        <div class="fd-timeline__connecting-line"></div>
        <div class="fd-timeline__node"></div>
        <div class="fd-timeline__connecting-line"></div>
    </div>
   
    <br><br>
    <h4>Horizontal node with icon</h4>
    <div class="fd-timeline__node-container fd-timeline__node-container--horizontal" style="width:150px;">
        <div class="fd-timeline__connecting-line"></div>
        <div class="fd-timeline__node fd-timeline__node--icon">
            <span class="sap-icon sap-icon--outgoing-call"></span>
        </div>
        <div class="fd-timeline__connecting-line"></div>
    </div>

    <br><br>
    <h4>Horizontal node for grouping</h4>
    <div class="fd-timeline__node-container fd-timeline__node-container--horizontal" style="width:150px;">
        <div class="fd-timeline__connecting-line"></div>
        <div class="fd-timeline__node fd-timeline__node--grouping"></div>
        <div class="fd-timeline__connecting-line"></div>
    </div>
    
</div>
`;

nodes.storyName = 'Nodes Anatomy';
nodes.parameters = {
    docs: {
        storyDescription: ''
    }
};
